--- a/blocks/elements/__button-like/elements__button-like.css
+++ b/blocks/elements/__button-like/elements__button-like.css
@@ -1,5 +1,5 @@
 .elements__button-like {
-    background: no-repeat center url("../../../images/likeButton.png");
+    background: no-repeat center url("../../../images/likeButton.svg");
     width: 23px;
     height: 19px;
     border: 0;
