--- a/blocks/popup/__profession/popup__profession.css
+++ b/blocks/popup/__profession/popup__profession.css
@@ -1,5 +1,5 @@
 .popup__profession {
-    font-family: 'Inter';
+    font-family: 'Inter', "Arial", sans-serif;
     font-weight: 400;
     width: 358px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
