--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,7 +1,7 @@
 .profile__button-add {
     width: 150px;
     height: 50px;
-    margin: auto 0 auto 13px;
+    margin: auto 0 auto 0;
     padding: 0;
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
@@ -17,7 +17,7 @@
 @media screen and (max-width: 767px) {
     .profile__button-add {
         margin-top: 36px;
-        width: calc(100% - 38px);
+        width: 100%;
     }
 }
 
