--- a/blocks/profile/__info-edit/profile__info-edit.css
+++ b/blocks/profile/__info-edit/profile__info-edit.css
@@ -2,3 +2,9 @@
     display: flex;
     align-items: baseline;
 }
+
+@media screen and (max-width: 425px) {
+    .profile__name {
+        width: 282px;
+    }
+}
