--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
-    margin-right: auto;
+    margin: 0 auto 0 0;
 }
 
 @media screen and (max-width:768px) {
     .profile__info {
-        margin-right: 0;
+        margin-right: auto;
+        margin-left: auto;
     }
 }
