--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,12 +1,16 @@
 .profile {
     display: flex;
     margin-top: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: calc(100%-38px);
 }
 
 @media screen and (max-width: 900px) {
     .profile {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 19px;
+        margin-right: 19px;
     }
 }
 
