--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,7 +4,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: calc(100%-38px);
+    width: calc(100% - 38px);
 }
 
 @media screen and (max-width: 900px) {
