feat: add form for cards creating, removing cards, create popup for images

--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/elements/__button-like/elements__button-like.css);
 @import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__button-like/_active/elements__button-like_active.css);
+@import url(../blocks/elements/__button-delete/elements__button-delete.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__coryright.css);
 @import url(../blocks/main/main.css);
@@ -29,3 +30,7 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__photo/popup__photo.css);
+@import url(../blocks/popup/__zoom-caption/popup__zoom-caption.css);
+@import url(../blocks/popup/__zoom-photo/popup__zoom-photo.css);
+@import url(../blocks/popup/__zoom/popup__zoom.css);
