--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_dark/popup_dark.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
 @import url(../blocks/popup/__zoom-caption/popup__zoom-caption.css);
