--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,7 @@
     margin-top: 51px;
     justify-content: center;
     max-width: 880px;
+    min-height: 50vh;
 }
 
 @media screen and (max-width: 425px) {
