--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,6 +10,8 @@
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/profile/__info-edit/profile__info-edit.css);
+@import url(../blocks/profile/__edit-avatar/profile__edit-avatar.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
 @import url(../blocks/elements/elements.css);
@@ -19,6 +21,8 @@
 @import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__button-like/_active/elements__button-like_active.css);
 @import url(../blocks/elements/__button-delete/elements__button-delete.css);
+@import url(../blocks/elements/__group-like/elements__group-like.css);
+@import url(../blocks/elements/__number-like/elements__number-like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__coryright.css);
 @import url(../blocks/main/main.css);
@@ -40,3 +44,4 @@
 @import url(../blocks/popup/__zoom-photo/popup__zoom-photo.css);
 @import url(../blocks/popup/__zoom/popup__zoom.css);
 @import url(../blocks/popup/__form-set/popup__form-set.css);
+@import url(../blocks/popup/__confirm/popup__confirm.css);
